# pg-backup-manager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
docs/architecture/: application-flow.md  config-model.md  project-structure.md  scheduler-integration.md
docs/dev-guide/: build.md
docs/user-guide/: quick-start.md
resources/examples/: example-profile.json
src/pg_backup_manager/: __main__.py
src/pg_backup_manager/app/: services.py
src/pg_backup_manager/domain/: models.py  validators.py
src/pg_backup_manager/infrastructure/: backup_runner.py  config_store.py  logging_service.py  scheduler.py
src/pg_backup_manager/shared/: errors.py  paths.py
src/pg_backup_manager/ui/: app_settings_controller.py  backup_controller.py  entry_menu.py  file_actions.py  form_state.py  main_window.py  profile_controller.py  profile_mapper.py  scheduler_controller.py  ui_style.py
src/pg_backup_manager/ui/tabs/: actions_tab.py  backup_tab.py  config_tab.py  postgres_tab.py  scheduler_tab.py
