[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-backup-manager"
version = "0.1.0"
description = "Windows desktop app for PostgreSQL 1C backup management"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Denis Boytsov" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]